Make the transformation test run again